<resources>
    <string name="app_name">Latansa Reload</string>
    <string name="keteranganOTP">Untuk mendapatkan Kode OTP silahkan pilih salah satu metode dibawah ini :</string>
    <string name="otp">Kode telah dikirim ke Email, silahkan cek Email Anda</string>
    <string name="syaratketentuan">Terima kasih Anda telah mengakses situs atau mengunduh,
        menggunakan layanan, produk dan/atau aplikasi (“Aplikasi”) LATANSA RELOAD. Pada saat Anda
        mengakses, mengunduh atau menggunakan Aplikasi LATANSA RELOAD maka Syarat dan Ketentuan ini
        berlaku terhadap Anda. Dengan melanjutkan mengakses, mengunduh atau menggunakan Aplikasi
       LATANSA RELOAD, Anda mengakui dan menyetujui bahwa Anda telah membaca dengan teliti, memahami,
        menerima dan menyetujui seluruh Syarat dan Ketentuan ini yang akan berlaku sebagai
        perjanjian antara Anda dengan Kami. Syarat dan Ketentuan ini juga berlaku setiap kali
        Anda melakukan transaksi menggunakan Aplikasi LATANSA RELOAD melalui mitra penyedia
        platform lain yang menandatangani perjanjian kerjasama dengan Kami dan menggunakan
        Aplikasi LATANSA RELOAD sebagai salah satu metode pembayaran (“Partner LATANSA RELOAD”)</string>

    <string name="Open">buka</string>
    <string name="Close">tutup</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="password_actual">123456</string>

    <string name="userProfil">&#xea05;</string>
    <string name="gantiPIN">&#xe98f;</string>
    <string name="Point">&#xe9e1;</string>
    <string name="Device">&#xe9dd;</string>

    <string name="userabata">&#xea00;</string>
    <string name="iconhome">&#xe980;</string>
    <string name="icontransaksi">&#xe939;</string>
    <string name="iconrekapsaldo">&#xe938;</string>
    <string name="iconchat">&#xe999;</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="saldoku">Saldoku</string>
    <string name="pulsa">pulsa</string>
    <string name="salessaldoku">Silahkan melakukan pembayaran ke Sales anda, jika ada kendala ketika melakukan pembayaran silahkan menghubungi CS</string>
    <string name="nomdua">2. Informasikan pada Server nominal tagihan anda</string>
    <string name="nom1">1. Hubungi Server Anda</string>
    <string name="nom3">3. Berikan uang tunai sesuai nominal Tagihan</string>
    <string name="nom4">4. Anda akan menerima Notifikasi Tagihan saldo server telah dibayar</string>
    <string name="bank">Silahkan melakukan pembayaran ke nomor rekening yang sudah tertera diatas. Kemudian selesaikan proses pembayaran dengan melakukan upload bukti transfer. Jika ada kendala silahkan hubungi CS.</string>
    <string name="car1">1. Masukan kartu ATM dan PIN Rekening Anda</string>
    <string name="car2">2. Pilih menu Transfer</string>
    <string name="car3">3. Pilih bank yang dituju</string>
    <string name="car4">4. Masukan nomor rekening Tujuan</string>
    <string name="car6">6. Ikuti instruksi untuk menyelesaikan transaksi</string>
    <string name="car5">5. Masukan nominal Tagihan</string>
    <string name="selamat_datang_di_dompet_abata">Selamat Datang di Latansa Reload !</string>
    <string name="saya_menerima_dan_menyetujui_syarat_dan_ketentuan_aplikasi">Saya menerima dan menyetujui Syarat dan Ketentuan Aplikasi</string>
    <string name="silahkan_hubungi_cs_jika_dalam_1x24_jam_pembelian_belum_diterima">Silahkan Hubungi CS jika dalam 1x24 jam pembelian belum diterima</string>
    <string name="produk">Produk</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="masukan_nomor">Masukan Nomor</string>
    <string name="masukan_nomors">Masukan nomor</string>
    <string name="nomor_pelanggan_minimal_7_karakter">Nomor Pelanggan minimal 7 karakter</string>
    <string name="nomor_pelanggan">Nomor Pelanggan</string>
    <string name="silahkan_lakukan_pembayaran_sebelum_tanggal_tersebut">Silahkan lakukan pembayaran sebelum tanggal tersebut</string>
    <string name="nominal_diatas_adalah_nominal_untuk_pengajuan_limit_baru">Nominal diatas adalah nominal untuk pengajuan limit</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="masukan_nama_pemilik">Masukan Nama Pemilik</string>
    <string name="nama_konter">Nama Konter</string>
    <string name="masukan_nama_konter">Masukan Nama Konter</string>
    <string name="email">Email</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="alamat">Alamat</string>
    <string name="masukan_alamat">Masukan Alamat</string>
    <string name="provinsi">Provinsi</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="kabupaten_kota">Kabupaten/Kota</string>
    <string name="pilih_kabupaten_kota">Pilih Kabupaten / Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="pilih_kelurahan">Pilih Kelurahan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="pilih_kode_pos">Pilih Kode Pos</string>
    <string name="nomor_hanphone">Nomor Hanphone</string>
    <string name="nomor_yang_dimasukan_digunakan_untuk_login">Nomor yang dimasukan digunakan untuk login</string>
    <string name="masukan_nomorr">Masukan Nomor</string>
    <string name="simpan">Simpan</string>
    <string name="pengajuan_limit">Pengajuan Limit</string>
    <string name="isi_pengajuan_limit">Isi pengajuan Limit</string>
    <string name="ajukan">Ajukan</string>
    <string name="loading">Loading..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="type">
        <item>SALDOKU</item>
        <item>PAYLATTER</item>

    </string-array>
</resources>