<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".TambahKonter.addKonter">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"
                android:textSize="14sp"
                android:text="@string/nama_pemilik"
                />
            <EditText
                android:id="@+id/namapemilikKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:hint="@string/masukan_nama_pemilik"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"
                android:textSize="14sp"
                android:text="@string/nama_konter"
                />
            <EditText
                android:id="@+id/namakonterKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:hint="@string/masukan_nama_konter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/email"
                />
            <EditText
                android:id="@+id/emailRegisKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:hint="@string/masukan_email"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"
                android:textSize="14sp"
                android:text="@string/alamat"
                />
            <EditText
                android:id="@+id/alamatRegisKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:hint="@string/masukan_alamat"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/provinsi"
                />
            <EditText
                android:id="@+id/provinsiKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:hint="@string/pilih_provinsi"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kabupaten_kota"
                />
            <EditText
                android:id="@+id/kabupatenKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:hint="@string/pilih_kabupaten_kota"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kecamatan"
                />

            <EditText
                android:id="@+id/kecamatanKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:hint="@string/pilih_kecamatan"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kelurahan"
                />

            <EditText
                android:id="@+id/kelurahanKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:hint="@string/pilih_kelurahan"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/kode_pos"
                />

            <EditText
                android:id="@+id/postCodeKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:hint="@string/pilih_kode_pos"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"
                android:textSize="14sp"
                android:text="@string/nomor_hanphone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="5dp"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:text="@string/nomor_yang_dimasukan_digunakan_untuk_login"
                />
            <EditText
                android:id="@+id/PhoneRegisKonter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:inputType="number"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="4dp"
                android:hint="@string/masukan_nomor"
                />



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:visibility="gone"
                    android:layout_marginTop="23dp"
                    />

                <Button
                    android:id="@+id/Register_ButtonKonter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:fontFamily="@font/mukta"
                    android:background="@drawable/bg_button_login"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/simpan"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>




        </LinearLayout>


    </ScrollView>


</LinearLayout>