<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".menuUtama.PaketData.UangElektronik.ProdukUangElektronik">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_putih"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/produk"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputprodukuangelektronik"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/bg_edittextlogin"
            android:hint="@string/pilih_produk"
            android:inputType="text"
            android:paddingEnd="8sp"
            android:paddingStart="7dp"
            android:textSize="17sp"
            android:autofillHints="s" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/masukan_nomor"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputnomoruangelektronik"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/bg_edittextlogin"
            android:hint="@string/masukan_nomors"
            android:inputType="number"
            android:paddingEnd="8sp"
            android:paddingStart="7dp"
            android:textSize="17sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tujukarakteruangelektronik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10sp"
            android:text="@string/nomor_pelanggan_minimal_7_karakter"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:textStyle="bold" />


    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"
        android:id="@+id/ReyUangElektronik"/>
</LinearLayout>