<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:scrollbars="none"
    android:layout_height="match_parent"
    tools:context=".Transaksi.TrasferBank">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Transfer Bank BRI"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:fontFamily="@font/mukta"
        />

    <View
        android:layout_width="match_parent"
        android:background="@color/gray3"
        android:layout_marginTop="20dp"
        android:layout_height="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total Tagihan"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/mukta"
        android:textColor="@color/black"
        android:textSize="18dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp."
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/saldokubank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.000.000"
            android:fontFamily="@font/mukta"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:background="@color/gray3"
        android:layout_height="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No. Rekening"
        android:fontFamily="@font/mukta"
        android:textColor="@color/black"
        android:textSize="18dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="038701002403565"
        android:fontFamily="@font/mukta"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="a.n PT Abata Citra Solusi"
        android:fontFamily="@font/mukta"
        android:textColor="@color/gray3"
        android:textSize="18dp"

        />
    <View
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:background="@color/gray3"
        android:layout_height="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@drawable/bgsalessaldoku"
        android:padding="10dp"
        android:text="@string/bank"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="Petunjuk Transfer ATM"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray4"
        android:fontFamily="@font/mukta"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/car1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:textColor="@color/gray4"
        android:fontFamily="@font/mukta"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/car2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:textColor="@color/gray4"
        android:fontFamily="@font/mukta"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/car3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:textColor="@color/gray4"
        android:fontFamily="@font/mukta"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/car4"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:textColor="@color/gray4"
        android:fontFamily="@font/mukta"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/car5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:textColor="@color/gray4"
        android:fontFamily="@font/mukta"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/car6"
        />

    <Button
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:text="Upload Bukti"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_login2"
        />
    </LinearLayout>

</ScrollView>