<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:background="@color/white"
    android:padding="19dp"
    tools:context=".SaldoServer.BayarSalesServer">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Bayar ke Sales"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="Total Top UP"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/saldokusales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/mukta"
                android:text=""
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/gray3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Sales"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mukta"
            android:text=""
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/gray3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgsalessaldoku"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/salessaldoku"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="Petunjuk Bayar Sales"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mukta"
            android:text="@string/nom1"
            android:textColor="@color/gray4"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/mukta"
            android:text="@string/nomdua"
            android:textColor="@color/gray4"
            android:textSize="15sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/mukta"
            android:text="@string/nom3"
            android:textColor="@color/gray4"
            android:textSize="15sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/mukta"
            android:text="@string/nom4"
            android:textColor="@color/gray4"
            android:textSize="15sp"  />

        <Button
            android:id="@+id/idbayarsaldokuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_login2"
            android:text="OK"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>